disable init container for worker

--- a/internals/applications/superset.yaml
+++ b/internals/applications/superset.yaml
@@ -19,6 +19,8 @@ spec:
           repository: harbor.ingtra.net/dockerhub/library/busybox
         supersetNode:
           initContainers: []
+        supersetWorker:
+          initContainers: []
         configOverrides:
           useCustomConnections: |
             SQLALCHEMY_DATABASE_URI = 'mysql://superset:superset@mysql.mdc.ingtra.net/superset'
