disable init container for init job

--- a/internals/applications/superset.yaml
+++ b/internals/applications/superset.yaml
@@ -21,6 +21,8 @@ spec:
           initContainers: []
         supersetWorker:
           initContainers: []
+        init:
+          initContainers: []
         configOverrides:
           useCustomConnections: |
             SQLALCHEMY_DATABASE_URI = 'mysql://superset:superset@mysql.mdc.ingtra.net/superset'
