--- a/internals/applications/superset.yaml
+++ b/internals/applications/superset.yaml
@@ -36,6 +36,9 @@ spec:
               'CACHE_REDIS_PORT': 6379,
               'CACHE_REDIS_DB': 2
             }
+            DATA_CACHE_CONFIG = CACHE_CONFIG
+            FILTER_STATE_CACHE_CONFIG = CACHE_CONFIG
+            EXPLORE_FORM_DATA_CACHE_CONFIG = CACHE_CONFIG
         postgresql:
           enabled: false
         redis:
