--- a/internals/applications/superset.yaml
+++ b/internals/applications/superset.yaml
@@ -39,6 +39,8 @@ spec:
             DATA_CACHE_CONFIG = CACHE_CONFIG
             FILTER_STATE_CACHE_CONFIG = CACHE_CONFIG
             EXPLORE_FORM_DATA_CACHE_CONFIG = CACHE_CONFIG
+          publicAsAdmin: |
+            AUTH_ROLE_PUBLIC = 'Admin'
         postgresql:
           enabled: false
         redis:
