use results backend

--- a/internals/applications/superset.yaml
+++ b/internals/applications/superset.yaml
@@ -46,7 +46,7 @@ spec:
             DATA_CACHE_CONFIG = CACHE_CONFIG
             FILTER_STATE_CACHE_CONFIG = CACHE_CONFIG
             EXPLORE_FORM_DATA_CACHE_CONFIG = CACHE_CONFIG
-            RESULT_BACKEND = RedisCache(
+            RESULTS_BACKEND = RedisCache(
               host='redis.mdc.ingtra.net',
               port=6379,
               key_prefix='superset_results_'
