change git branch

--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/ingtranet/helm-charts.git
     path: kyuubi
-    targetRevision: master
+    targetRevision: main
     helm:
       releaseName: kyuubi
       values: |
