--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -13,10 +13,11 @@ spec:
       releaseName: kyuubi
       values: |
         replicaCount: 1
-
         image:
           repository: harbor.ingtra.net/library/kyuubi
           tag: 1.5.1-s3.2.1
+        service:
+          type: LoadBalancer
   destination:
     server: https://kubernetes.default.svc
     namespace: kyuubi
