--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -19,15 +19,15 @@ spec:
         service:
           type: LoadBalancer
         additionalConfigProperties:
-         - spark.driver.extraJavaOptions="-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact"
+         #- spark.driver.extraJavaOptions="-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact"
          - spark.driver.memory=1G
-         - spark.executor.extraJavaOptions="-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact"
+         #- spark.executor.extraJavaOptions="-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact"
          - spark.executor.memory=1G
          - spark.executor.memoryOverhead=1G 
          - spark.shuffle.io.preferDirectBufs=false 
          - spark.network.io.preferDirectBufs=false 
-         - spark.eventLog.gcMetrics.youngGenerationGarbageCollectors="Shenandoah Cycles" 
-         - spark.eventLog.gcMetrics.oldGenerationGarbageCollectors="Shenandoah Pauses" 
+         #- spark.eventLog.gcMetrics.youngGenerationGarbageCollectors="Shenandoah Cycles" 
+         #- spark.eventLog.gcMetrics.oldGenerationGarbageCollectors="Shenandoah Pauses" 
          - spark.sql.extensions=org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions 
          - spark.sql.catalog.iceberg=org.apache.iceberg.spark.SparkCatalog 
          - spark.sql.catalog.iceberg.type=hive 
