--- a/internals/rbac/kyuubi-spark.yaml
+++ b/internals/rbac/kyuubi-spark.yaml
@@ -1,11 +1,3 @@
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: spark
-  namespace: kyuubi
-
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -13,7 +5,7 @@ metadata:
   namespace: kyuubi
 subjects:
   - kind: ServiceAccount
-    name: spark
+    name: default
     apiGroup: ""
 roleRef:
   kind: ClusterRole
