use cluster deploy mode

--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -43,6 +43,7 @@ spec:
          - spark.hadoop.fs.s3a.bucket.all.committer.magic.enabled=true
          - spark.master=k8s://https://kubernetes.default.svc
          - spark.executor.instances=3
+         - spark.submit.deployMode=cluster
          - spark.kubernetes.namespace=kyuubi
          - spark.kubernetes.container.image=harbor.ingtra.net/library/spark:3.2.1
          - spark.kubernetes.container.image.pullPolicy=Always
