use zookeeper service

--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -20,6 +20,7 @@ spec:
           type: LoadBalancer
         additionalConfigProperties:
          - kyuubi.engine.connection.url.use.hostname=false
+         - kyuubi.zookeeper.embedded.client.port.address=kyuubi-zk-svc
          - spark.driver.extraJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact
          - spark.driver.memory=1G
          - spark.executor.extraJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact
