use default java options

--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -20,9 +20,9 @@ spec:
           type: LoadBalancer
         additionalConfigProperties:
          - kyuubi.engine.connection.url.use.hostname=false
-         - spark.driver.extraJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact
+         - spark.driver.defaultJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -Dspark.shuffle.io.preferDirectBufs=false
          - spark.driver.memory=512M
-         - spark.executor.extraJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact
+         - spark.executor.defaultJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -Dspark.shuffle.io.preferDirectBufs=false
          - spark.executor.memory=1G
          - spark.executor.memoryOverhead=1G
          - spark.shuffle.io.preferDirectBufs=false
