set default catalog

--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -28,6 +28,7 @@ spec:
           - spark.network.io.preferDirectBufs=false
           - spark.eventLog.gcMetrics.youngGenerationGarbageCollectors=Shenandoah Cycles
           - spark.eventLog.gcMetrics.oldGenerationGarbageCollectors=Shenandoah Pauses
+          - spark.sql.defaultCatalog=iceberg
           - spark.sql.extensions=org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
           - spark.sql.catalog.iceberg=org.apache.iceberg.spark.SparkCatalog
           - spark.sql.catalog.iceberg.type=hive
