--- a/internals/applications/airflow.yaml
+++ b/internals/applications/airflow.yaml
@@ -12,8 +12,8 @@ spec:
     helm:
       releaseName: airflow
       values: |
-        defaultAirflowRepository: harbor.ingtra.net/dockerhub/apache/airflow
-        defaultAirflowTag: 2.2.4-python3.9
+        defaultAirflowRepository: harbor.ingtra.net/library/airflow
+        defaultAirflowTag: 2.2.4
         executor: "KubernetesExecutor"
         dags:
           gitSync:
