--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -23,6 +23,7 @@ spec:
           - spark.driver.defaultJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -Dio.netty.noPreferDirect=true -Dio.netty.maxDirectMemory=0
           - spark.driver.memory=512M
           - spark.executor.defaultJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -Dio.netty.noPreferDirect=true -Dio.netty.maxDirectMemory=0
+          - spark.executor.cores=3
           - spark.executor.memory=4G
           - spark.shuffle.io.preferDirectBufs=false
           - spark.network.io.preferDirectBufs=false
@@ -44,7 +45,6 @@ spec:
           - spark.master=k8s://https://kubernetes.default.svc
           - spark.executor.instances=3
           - spark.kubernetes.executor.request.cores=0.1
-          - spark.kubernetes.executor.limit.cores=2
           - spark.kubernetes.namespace=kyuubi
           - spark.kubernetes.container.image=harbor.ingtra.net/library/spark:3.2.1
           - spark.kubernetes.container.image.pullPolicy=Always
