--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -25,6 +25,7 @@ spec:
           - spark.executor.defaultJavaOptions=-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -Dio.netty.noPreferDirect=true -Dio.netty.maxDirectMemory=0
           - spark.executor.cores=3
           - spark.executor.memory=4G
+          - spark.task.cpus=3
           - spark.shuffle.io.preferDirectBufs=false
           - spark.network.io.preferDirectBufs=false
           - spark.eventLog.gcMetrics.youngGenerationGarbageCollectors=Shenandoah Cycles
