--- a/pyrami/kinesis-to-kafka.yaml
+++ b/pyrami/kinesis-to-kafka.yaml
@@ -38,7 +38,7 @@ spec:
             - name: PYRAMI_REDIS_URL
               value: redis.mdc.ingtra.net:6379
             - name: PYRAMI_KAFKA_BOOTSTRAP_SERVERS
-              value: redpanda.mdc.ingtra.net:9092
+              value: kafka.mdc.ingtra.net:9092
             - name: PYRAMI_CONSUMER_NAME
               value: pyrami-kinesis-to-kafka
             - name: PYRAMI_FROM_EARLIEST
