temp use dockerhub

--- a/pyrami/kinesis-to-kafka.yaml
+++ b/pyrami/kinesis-to-kafka.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: kinesis-to-kafka
-          image: harbor.ingtra.net/dockerhub/cookieshake/pyrami
+          image: cookieshake/pyrami
           imagePullPolicy: Always
           env:
             - name: AWS_ACCESS_KEY_ID
