--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -6,12 +6,12 @@ metadata:
 spec:
   project: default
   source:
-    chart: trino
-    repoURL: https://trinodb.github.io/charts
-    targetRevision: 0.8.0
-    #repoURL: https://github.com/trinodb/charts.git
-    #path: charts/trino
-    #targetRevision: main
+    #chart: trino
+    #repoURL: https://trinodb.github.io/charts
+    #targetRevision: 0.7.0
+    repoURL: https://github.com/trinodb/charts.git
+    path: charts/trino
+    targetRevision: main
     helm:
       releaseName: trino
       values: |
