ebgp-multi-hop: true

--- a/internals/applications/metallb.yaml
+++ b/internals/applications/metallb.yaml
@@ -15,9 +15,9 @@ spec:
         configInline:
           peers:
             - peer-address: 172.23.10.2
-              source-address: 172.23.10.1
               peer-asn: 64521
               my-asn: 64523
+              ebgp-multi-hop: true
           address-pools:
             - name: default
               protocol: bgp
