--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -48,7 +48,7 @@ spec:
           - spark.executor.instances=3
           - spark.kubernetes.executor.request.cores=0.1
           - spark.kubernetes.namespace=kyuubi
-          - spark.kubernetes.container.image=harbor.ingtra.net/library/spark:3.3.0
+          - spark.kubernetes.container.image=harbor.ingtra.net/library/spark:3.3.0-scala2.13-java11-iceberg0.14.0 
           - spark.kubernetes.container.image.pullPolicy=Always
           - spark.kubernetes.executor.podTemplateFile=http://minio.mdc.ingtra.net/bins/spark/executor_pod_template.yaml
   destination:
