--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -50,6 +50,7 @@ spec:
           - spark.kubernetes.namespace=kyuubi
           - spark.kubernetes.container.image=harbor.ingtra.net/library/spark:3.3.0-scala2.12-java11-iceberg0.14.0 
           - spark.kubernetes.container.image.pullPolicy=Always
+          - spark.kubernetes.executor.podNamePrefix=kyuubi-spark-executor
           - spark.kubernetes.executor.podTemplateFile=http://minio.mdc.ingtra.net/bins/spark/executor_pod_template.yaml
   destination:
     server: https://kubernetes.default.svc
