--- a/internals/applications/kyuubi.yaml
+++ b/internals/applications/kyuubi.yaml
@@ -31,6 +31,7 @@ spec:
           - spark.network.io.preferDirectBufs=false
           - spark.eventLog.gcMetrics.youngGenerationGarbageCollectors=Shenandoah Cycles
           - spark.eventLog.gcMetrics.oldGenerationGarbageCollectors=Shenandoah Pauses
+          - spark.sql.shuffle.partitions=32
           - spark.sql.defaultCatalog=iceberg
           - spark.sql.extensions=org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions
           - spark.sql.catalog.iceberg=org.apache.iceberg.spark.SparkCatalog
