change pod anti affinity

--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -80,12 +80,14 @@ spec:
         affinity:
           podAntiAffinity:
             requiredDuringSchedulingIgnoredDuringExecution:
-              - labelSelector:
-                  matchExpressions:
-                    - key: component
-                      operator: In
-                      values: ["worker"]
-                topologyKey: "kubernetes.io/hostname"
+               - weight: 1
+                 podAffinityTerm:
+                   labelSelector:
+                    matchExpressions:
+                      - key: component
+                        operator: In
+                        values: ["worker"]
+                  topologyKey: "kubernetes.io/hostname"
         additionalCatalogs:
           iceberg: |
             connector.name=iceberg
