--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -32,8 +32,8 @@ spec:
         coordinator:
           jvm:
             maxHeapSize: 3G
-            gcMethod:
-              type: UseShenandoahGC
+          #  gcMethod:
+          #    type: UseShenandoahGC
           additionalJVMConfig:
           #  - "-XX:ShenandoahGCHeuristics=compact"
           resources:
@@ -56,8 +56,8 @@ spec:
         worker:
           jvm:
             maxHeapSize: 3G
-            gcMethod:
-              type: UseShenandoahGC
+          #  gcMethod:
+          #    type: UseShenandoahGC
           additionalJVMConfig:
           #  - "-XX:ShenandoahGCHeuristics=compact"
           resources:
@@ -113,7 +113,7 @@ spec:
           - query.max-total-memory=30GB
           - query.client.timeout=20m
           - task.concurrency=4
-          - task.max-worker-threads=16
+          - task.max-worker-threads=8
 
   destination:
     server: https://kubernetes.default.svc
